Fixed modal bug on mobile

--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  box-sizing: inherit;
   font-family: inherit;
 }
 
 html {
+  font-size: 62.5%;
   line-height: 1.6;
   background: linear-gradient(to bottom, #222222, #303030);
 }
 
 body {
+  box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   min-height: 100vh;
   color: #fff;
-  padding: 0 40px;
+  padding: 0 4rem;
 }
 
 @media screen and (max-width: 780px) {
@@ -34,15 +36,17 @@ body {
   }
 }
 
-.calendar__body {
-  overflow-x: scroll;
+@media screen and (max-width: 780px) {
+  .calendar__body {
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+  }
 }
 
 .calendar__table {
   border-collapse: collapse;
-  min-width: 700px;
+  min-width: 70rem;
   width: 100%;
-  overflow: scroll;
 }
 
 .calendar__table th {
@@ -66,7 +70,7 @@ body {
 
 .calendar__table th {
   width: 13.57%;
-  padding: 10px 0;
+  padding: 1rem 0;
 }
 
 .calendar__table th:nth-of-type(1) {
@@ -87,16 +91,16 @@ body {
 }
 
 .calendar__title {
-  font-size: 36px;
+  font-size: 3.6rem;
   font-weight: 400;
-  letter-spacing: 3px;
+  letter-spacing: .3rem;
   text-align: center;
 }
 
 .btn {
   border: none;
   background: transparent;
-  padding: 1rem;
+  padding: 1.6rem;
   cursor: pointer;
 }
 
@@ -106,7 +110,7 @@ body {
 }
 
 .btn--arrow {
-  font-size: 40px;
+  font-size: 4rem;
   color: #00bd4f;
   transition: all .3s ease;
 }
@@ -144,7 +148,7 @@ body {
 .calendar .calendar__day--empty {
   background-color: #d3d3d3;
   color: #f9f9f9;
-  font-size: 42px;
+  font-size: 4.2rem;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
 }
 
@@ -153,12 +157,12 @@ body {
   top: 0;
   left: 0;
   margin: 2px 0 0 2px;
-  width: 20px;
-  height: 20px;
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
   background-color: #0080d6;
   font-weight: 400;
-  font-size: 10px;
+  font-size: 1rem;
   color: #fff;
   display: flex;
   align-items: center;
@@ -167,7 +171,7 @@ body {
 
 
 .calendar__day {
-  height: 60px;
+  height: 6rem;
   display: flex;
   /* flex-direction: column; */
   justify-content: center;
@@ -181,7 +185,7 @@ body {
   text-align: center;
   width: 100%;
   color: rgb(199, 199, 199);
-  font-size: 12px;
+  font-size: 1.2rem;
 }
 
 .calendar__800 {
@@ -196,9 +200,9 @@ body {
 .calendar__selectable::after {
   content: "+";
   cursor: pointer;
-  font-size: 72px;
-  height: 80px;
-  width: 80px;
+  font-size: 7.2rem;
+  height: 8rem;
+  width: 8rem;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -209,14 +213,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.4);
+  box-shadow: 0 .3rem .6rem rgba(0,0,0,0.4);
   opacity: 0;
   transition: all .3s ease-in-out;
 }
 
 .calendar__selectable:hover::after {
   opacity: 1;
-  box-shadow: 0 5px 8px rgba(0,0,0,0.4);
+  box-shadow: 0 .5rem .8rem rgba(0,0,0,0.4);
 }
 
 .calendar .calendar__weekend {
@@ -228,8 +232,8 @@ body {
   background-color: #ff6f6f;
   position: relative;
   color: #f9f9f9;
-  font-size: 42px;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+  font-size: 4.2rem;
+  text-shadow: .1rem .1rem .3rem rgba(0,0,0,0.4);
 }
 
 .calendar__holiday .calendar__800 {
@@ -255,7 +259,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -263,15 +267,15 @@ body {
 .modal__content {
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
-  padding: 10px;
+  padding: 1rem;
   border: 1px solid #888;
-  border-radius: 3px;
+  border-radius: .3rem;
   width: 20%; /* Could be more or less, depending on screen size */
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 
 .modal__content select {
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 
 /* The Close Button */
@@ -291,7 +295,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 10px 0;
+  margin: 1rem 0;
 }
 
 .modal__form-group label {
@@ -319,32 +323,24 @@ body {
 .calendar__footer {
   display: flex;
   justify-content: flex-end;
-  padding: 5px;
+  padding: .5rem;
 }
 
 .btn--reset,
 .btn--start {
   color: #fff;
   font-weight: 700;
-  font-size: 18px;
-  border-radius: 5px;
+  font-size: 1.8rem;
+  border-radius: .5rem;
   transition: all .3s;
 }
-
-@media screen and (max-width: 500px) {
-  .btn--reset,
-  .btn--start {
-    width: 50%;
-  }
-}
-
 
 .btn--reset {
   background-color: #ffa600;
 }
 
 .btn--start {
-  margin-left: 10px;
+  margin-left: 1rem;
   background-color: #0080d6;
 }
 
@@ -370,7 +366,7 @@ body {
   width: 40%;
   margin: 0 auto;
   border-collapse: collapse;
-  margin-top: 5px;
+  margin-top: .5rem;
   color: #000;
 }
 
@@ -405,11 +401,11 @@ body {
 .highlight {
   cursor: pointer;
   display: inline-block;
-  padding: 2px 10px;
-  border-radius: 100px;
+  padding: .2rem 1rem;
+  border-radius: 10rem;
   background-color: #0080d6;
   color: #fff;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+  box-shadow: 0 1rem 2rem rgba(0,0,0,0.2);
   transform: scale(1.07) translateY(-3px);
   transition: all .3s;
 }
@@ -421,7 +417,7 @@ body {
 .summary-table tr.summary-table__row--highlight {
   background-color: #ffa600;
   transition: all .3s;
-  box-shadow: inset 0 10px 20px rgba(0,0,0,0.2);
+  box-shadow: inset 0 1rem 2rem rgba(0,0,0,0.2);
   border: none;
 }
 
@@ -429,4 +425,40 @@ body {
   opacity: 0;
   height: 0;
   visibility: hidden;
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 1.1rem;
+  }
+
+  .btn {
+    font-size: 1.6rem;
+  }
+
+  .btn--arrow {
+    font-size: 2.4rem;
+  }
+
+  .modal__content {
+    width: 100%;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.6rem;
+  }
+
+  .modal__content select {
+    font-size: 1.6rem;
+  }
+
+  .calendar__title {
+    font-size: 2.4rem;
+  }
+
+  .btn--reset,
+  .btn--start {
+    width: 50%;
+  }
 }
